src/pages/es/v1.23.0/configuration/sso.mdx
---
title: "SSO"
metaTitle: "SSO"
metaDescription: "Cómo configurar el inicio de sesión único (SSO) mediante SAML2."
---
import ORDynamicCode from '../../../../components/Code/ORDynamicCode';
export const initialValues = {domain: "YOUR_DOMAIN", tenantId: "TENANT_ID", tenantKey: "TENANT_KEY", port: "PORT"};
export const ignoreValues = {jumpcloud: "https://sso.jumpcloud.com"};

El inicio de sesión único (mediante SAML2) solo está disponible en la Enterprise Edition de OpenReplay.

## Configuración del proveedor de identidad (IDP)

En el panel de tu proveedor de identidad, crea una nueva aplicación llamada `openreplay` (puedes usar este <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">icono</a>). En la página de configuración, asegúrate de establecer el siguiente valor (asegúrate de reemplazar <code>{initialValues.domain}</code> con el valor correcto, por ejemplo `https://openreplay.mycompany.com`):

| Variable | Valor |
|----------|-------------|
| ACS URL (también llamada Single Sign On URL o Consumer URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code> |
| Entity ID (también llamado Audience) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code> |
| Single Logout URL (también llamada SLO URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code> (opcional) |
| Name ID (a veces es configurable en la sección 'Attribute Statements' o 'Parameters') | `Email` o `EmailAddress` o `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`, según tu proveedor de identidad |
| SAML initiator | Establécelo en `Service Provider` (opcional) |

En la sección 'Attribute Statements' o 'Parameters', asegúrate de definir los siguientes campos:

| Campo | Valor |
|----------|-------------|
| tenantKey | <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> su valor se puede encontrar en el Dashboard, en 'Preferences' > 'Account' (este atributo no debe agregarse si usas nuestro plan Cloud Dedicated) |
| firstName | `user.firstName` |
| lastName |  `user.lastName` |
| internalId | ID interno o `user.email` (el ID del usuario en tu sistema de gestión de identidades) (opcional) |
| groups | Representa el rol y los privilegios de administrador del usuario en OpenReplay; según tu proveedor de identidad puede ser `user.role` o `group`, etc. (opcional, predeterminado = `member` sin privilegios de administrador). Para simplificar la gestión de roles de OpenReplay desde el lado del IdP, puedes crear un grupo llamado OpenReplay-admin donde incluyas a los usuarios con privilegios de administrador, y un grupo llamado OpenReplay-member donde incluyas a los usuarios que tienen el rol 'member' |

Ahora deberías tener todos los valores requeridos para el siguiente paso/sección.

## Configuración de SSO (SAML2)

Si usas nuestro plan Cloud dedicated, ve a la [Consola](https://console.openreplay.com), luego haz clic en la instancia y establece las variables en la sección SSO.

De lo contrario, si ejecutas nuestra Enterprise Edition, ejecuta `openreplay -e` y descomenta y luego actualiza las siguientes variables de entorno en la sección `chalice`:

| Variable | Descripción |
|----------|-------------|
| idp_entityId | El `entityId` de tu proveedor de identidad, también denominado `Issuer URL` |
| idp_sso_url | El `singleSignOnService` de tu proveedor de identidad, también denominado `SAML 2.0 Endpoint (HTTP)` |
| idp_x509cert | El `x509cert`, debe ser una cadena de una sola línea, sin saltos de línea. Puedes usar <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">esta herramienta</a> para formatear tu valor |
| idp_name | El nombre del proveedor de identidad (opcional) |
| idp_sls_url | El `singleLogoutService` de tu proveedor de identidad, también denominado `SLO Endpoint (HTTP)` (opcional) |
| enforce_SSO | Si se establece en `true`, se bloquearán todas las conexiones con nombre de usuario y contraseña (opcional, predeterminado=`false`) |

Luego, guarda y sal usando `:wq` para que los cambios surtan efecto:

## Certificado de OpenReplay

Esto es opcional; puedes agregar un certificado x509 para mayor seguridad de SSO:

1. ejecuta este comando en tu servidor o en tu máquina segura (puedes cambiar el tiempo de validez de tu certificado según tus necesidades):
```bash
openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout openreplay-sso.key -out openreplay-sso.crt
```
2. En tu servidor, ejecuta `openreplay -e`
3. En la sección `chalice`, agrega las siguientes variables de entorno:
- **sp_crt**: debe ser una cadena de una sola línea, sin saltos de línea, del archivo 'openreplay-sso.crt' generado (puedes usar <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">esta herramienta</a> para formatear tu valor)
- **sp_key**: debe ser una cadena de una sola línea, sin saltos de línea, del archivo 'openreplay-sso.key' generado
4. Guarda y sal usando `:wq` para que los cambios surtan efecto
5. Agrega el archivo 'openreplay-sso.crt' generado a la configuración de la aplicación de tu proveedor de identidad

## Ejemplo usando Okta

1. Inicia sesión en tu panel de administración de Okta y ve a 'Applications' > 'Applications'
2. Presiona 'Create new app integration', luego selecciona SAML 2.0 y presiona 'Next'
3. Establece el 'App Name' en OpenReplay (puedes subir este <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">icono</a>) para tu aplicación) y luego presiona 'Next'
4. Establece:
 - **Single sign on URL** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Audience URI (SP Entity ID)** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** en `EmailAddress`
5. Define los siguientes campos en 'Attribute Statements':
 - **tenantKey**: formato `Basic` y establece el valor en <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, que se encuentra en el dashboard de OpenReplay en 'Preferences' > 'Account' (este atributo no debe agregarse si usas nuestro plan Cloud Dedicated)
 - **firstName**: formato `Basic` y establece el valor en `user.firstName`
 - **lastName**: formato `Basic` y establece el valor en `user.lastName`
 - **internalId**: formato `Basic` y establece el valor en `user.email`
6. Define el siguiente campo en 'Group Attribute Statement':
 - **groups**: formato `Basic`, filtro `Match Regex`, valor `OpenReplay-*` (o puedes especificar un filtro y una expresión regular diferentes según tus necesidades)
7. Presiona Next, selecciona 'I'm an Okta customer adding an internal app' y 'This is an internal app that we have created', luego presiona 'Finish'
8. En la pestaña Sign On, desplázate hacia abajo y presiona 'View Setup Instructions' para ver tu configuración de SAML2

Si usas nuestro plan Cloud dedicated, ve a la [Consola](https://console.openreplay.com), luego haz clic en la instancia y establece las variables en la sección SSO.

De lo contrario, si ejecutas nuestra Enterprise Edition:

9.  Conéctate por SSH a tu instalación de OpenReplay y ejecuta `openreplay -e`
10.  En la sección `chalice`, descomenta y luego establece las siguientes variables de entorno:
   - **idp_entityId**: Identity Provider Issuer
   - **idp_sso_url**: Identity Provider Single Sign-On URL
   - **idp_x509cert**: Certificado X.509, debe ser una cadena de una sola línea, sin saltos de línea (puedes usar <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">esta herramienta</a> para formatear tu valor)
   - **idp_name**: Okta
11.  Finalmente, guarda y sal usando `:wq` para que los cambios surtan efecto

## Ejemplo usando Azure Active Directory

1. Inicia sesión en tu portal de Azure y ve a 'Azure Active Directory'
2. Presiona '+ Add', selecciona 'Enterprise application' y luego haz clic en 'Create your own application'
3. Establece el 'App Name' en OpenReplay, luego selecciona 'Integrate any other application you don't find in the gallery (Non-gallery)' y presiona 'Create'
4. Navega a 'Single sign-on' en el menú de la izquierda y establece los siguientes valores en el bloque 'Basic SAML Configuration':
 - **Identifier (Entity ID)** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Reply URL (Assertion Consumer Service URL)** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Logout URL** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code>
5. Agrega los siguientes claims en el bloque 'Attribute & Claims' y asegúrate de dejar vacío el campo 'Namespace' en cada uno de ellos:
 - **tenantKey**: establece el valor en <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, que se encuentra en el dashboard de OpenReplay en 'Preferences' > 'Account' (este atributo/claim no debe agregarse si usas nuestro plan Cloud Dedicated)
 - **firstName**: establece el valor en `user.givenname`
 - **lastName**: establece el valor en `user.surname`
 - **internalId**: establece el valor en `user.mail`
6. Navega a 'Users and groups' y asigna los usuarios que selecciones a la aplicación

Si usas nuestro plan Cloud dedicated, ve a la [Consola](https://console.openreplay.com), luego haz clic en la instancia y establece las variables en la sección SSO (los valores se encuentran en 'Azure Active Directory' > 'OpenReplay' > 'Single sign-on').

De lo contrario, si ejecutas nuestra Enterprise Edition:

7. Conéctate por SSH a tu instalación de OpenReplay y ejecuta `openreplay -e`
8. En la sección `chalice`, descomenta y luego establece las siguientes variables de entorno (los valores se encuentran en 'Azure Active Directory' > 'OpenReplay' > 'Single sign-on'):
- **idp_entityId**: Azure AD Identifier
- **idp_sso_url**: Login URL
- **idp_sls_url**: Logout URL
- **idp_x509cert**: Certificado X.509, debe ser una cadena de una sola línea, sin saltos de línea (puedes usar <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">esta herramienta</a> para formatear tu valor)
- **idp_name**: Active Directory
9.  Finalmente, guarda y sal usando `:wq` para que los cambios surtan efecto

## Ejemplo usando Google Workspace (anteriormente G Suite)

#### Agregar atributos personalizados:

1. En la consola de administración de Google, ve a 'Directory' > 'Users' > 'More options' > 'Manage custom attributes'.
2. Haz clic en 'Add Custom Attribute'.
3. Establece los siguientes campos:
 - **Category**: 'OpenReplay'
 - **Custom fields**:
- **Name**: 'role'
- **Info type**: 'Text'
- **Visibility**: 'Visible to user and admin'
- **No. of values**: 'Single-value'
 - **Custom fields**:
- **Name**: 'adminPrivileges'
- **Info type**: 'Yes or No'
- **Visibility**: 'Visible to user and admin'
- **No. of values**: 'Single-value'
4. Haz clic en 'Add'
5. Para agregar valores a los nuevos atributos personalizados, ve a 'Users'
6. Selecciona el o los usuarios deseados
7. Haz clic en 'User information' y luego edita la sección 'OpenReplay'
8. Cambia el valor de **role** al rol deseado en 'OpenReplay' (el rol debe coincidir con el creado en el dashboard de OpenReplay en 'Preferences' > 'Roles')
9. Cambia el valor de **adminPrivileges** a 'Yes' si el usuario puede tener privilegios de administrador en OpenReplay
10. Haz clic en 'Save'

#### Configuración:

1. Inicia sesión en tu consola de administración de Google y ve a 'Apps'
2. Presiona 'Web and mobile apps' y luego haz clic en 'Add app' > 'Add custom SAML app'
3. Establece el 'App name' en OpenReplay (puedes subir este <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">icono</a> para 'App icon'') y luego presiona 'Continue'
4. Copia 'SSO URL', 'Entity ID' y 'Certificate', luego haz clic en 'Continue' (usaremos estos valores en el paso 11)
5. Establece:
 - **ACS URL** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/>/</code> (<code>{initialValues.tenantKey}</code> se encuentra en el dashboard de OpenReplay en 'Preferences' > 'Account', pero si usas nuestro plan Cloud Dedicated, deja vacío el valor de tenantKey)
 - **Entity ID** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** en `Email`
 - **Name ID** en `Basic information > Primary Email`
6. Haz clic en 'Continue' y luego presiona 'Add Mapping' para agregar los siguientes atributos:
 - `Basic information > First Name` -> **firstName**
 - `Basic information > Last Name` -> **lastName**
 - `Basic information > Primary Email` -> **internalId**
 - `OpenReplay > groups` -> **groups**
7. Haz clic en 'Finish'
8.  En la consola de administración de Google, ve a 'Apps' > 'Web and mobile apps' y selecciona 'OpenReplay'
9.  Haz clic en 'User access', selecciona 'ON for everyone' y luego presiona 'Save'

Si usas nuestro plan Cloud dedicated, ve a la [Consola](https://console.openreplay.com), luego haz clic en la instancia y establece las variables en la sección SSO.

De lo contrario, si ejecutas nuestra Enterprise Edition:

10. Conéctate por SSH a tu instalación de OpenReplay y ejecuta `openreplay -e`
11. En la sección `chalice > env`, descomenta y establece los siguientes atributos usando los valores del paso 4:
   - **idp_sso_url**: pega el valor de 'SSO URL'
   - **idp_entityId**: pega el valor de 'Entity ID'
   - **idp_x509cert**: usa <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">esta herramienta</a> para formatear el certificado copiado/descargado
   - **idp_name**: establece el valor en `G-Suite`
   - **idp_tenantKey**: <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> que se encuentra en el dashboard de OpenReplay en 'Preferences' > 'Account'
12. Finalmente, guarda y sal usando `:wq` para que los cambios surtan efecto

## Ejemplo usando JumpCloud

1. Inicia sesión en tu panel de administración de JumpCloud y, en el menú de la izquierda, ve a 'SSO'
2. Presiona '+ Add New Application', luego selecciona 'Custom SAML App'
3. Establece el 'Display Label' en OpenReplay (puedes subir este <a href="https://docs.openreplay.com/static/OpenReplay150x150.png" target="_blank">icono</a> para tu aplicación) y luego pasa a la pestaña 'SSO'
4. Establece:
- **IdP Entity ID** en <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> (<code>{initialValues.tenantKey}</code> se encuentra en el dashboard de OpenReplay en 'Preferences' > 'Account', pero si usas nuestro plan Cloud Dedicated, deja vacío el valor de tenantKey)
- **SP Entity ID** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
- **ACS URL** en <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
- **SAMLSubject NameID** en `email`
- **SAMLSubject NameID Format:** en `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`
- **Signature Algorithm** en `RSA-SHA256`
- Marca **Sign Assertion**
- **IDP URL** para que termine en <code>openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> (este valor no se puede cambiar más adelante; si usas nuestro plan Cloud Dedicated, deja vacía la parte de tenantKey)
5. Si seguiste las instrucciones de <a href="#openreplay-certificate">OpenReplay-Certificate</a>, puedes subir el archivo 'openreplay-sso.crt' generado presionando 'Upload SP Certificate'; de lo contrario, ignora este paso
6. Define los siguientes campos en 'USER ATTRIBUTE MAPPING' presionando el botón 'add attribute':
- **firstName**: establece el valor en `firstname`
- **lastName**: establece el valor en `lastname`
- **internalId**: establece el valor en `email`
- **groups**: opcional, el rol y los privilegios de administrador del usuario en OpenReplay; si es un valor constante para todos los usuarios, deberías definirlo en el siguiente paso, de lo contrario tienes que agregar un nuevo atributo de tipo string al grupo de JumpCloud, llamarlo `OpenReplay-groups` y establecer el valor en el nombre del rol, y luego, en la configuración de SSO, seleccionar 'Custom User or Group Attribute' y establecer el valor en `OpenReplay-groups`.
7. Define los siguientes campos en 'CONSTANT ATTRIBUTES' presionando el botón 'add attribute':
- **tenantKey**: establece el valor en <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, que se encuentra en el dashboard de OpenReplay en 'Preferences' > 'Account' (este atributo no debe agregarse si usas nuestro plan Cloud Dedicated)
- **groups**: opcional, ignóralo si ya se definió en el paso anterior, el rol y los privilegios de administrador del usuario en OpenReplay, debe coincidir con el nombre del rol ya definido en OpenReplay (predeterminado = `member` sin privilegios de administrador)
8. En esta etapa, puedes pasar a la pestaña 'User Groups' y seleccionar el grupo de usuarios que tendrán acceso a OpenReplay, o puedes hacerlo más tarde
9. Presiona 'activate' y 'continue' en la ventana emergente de confirmación
10. Presiona el icono de la nueva aplicación OpenReplay, luego en el menú desplegable de la izquierda 'IDP Certificate Valid' elige 'Download certificate'

Si usas nuestro plan Cloud dedicated, ve a la [Consola](https://console.openreplay.com), luego haz clic en la instancia y establece las variables en la sección SSO.

De lo contrario, si ejecutas nuestra Enterprise Edition:

11. Conéctate por SSH a tu instalación de OpenReplay y ejecuta `openreplay -e`
12. En la sección `chalice`, descomenta y luego establece las siguientes variables de entorno:
- **idp_entityId**: <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_sso_url**: <code>{ignoreValues.jumpcloud}/saml2/openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_x509cert**: el certificado descargado, debe ser una cadena de una sola línea, sin saltos de línea (puedes usar <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">esta herramienta</a> para formatear tu valor)
- **idp_name**: JumpCloud
13.  Finalmente, guarda y sal usando `:wq` para que los cambios surtan efecto

## Aprovisionamiento SCIM (System for Cross-domain Identity Management)

Openreplay admite la opción de aprovisionar identidades de usuario en la Enterprise Edition.

Para integrarte con el servicio SCIM de Openreplay, simplemente habilita el aprovisionamiento SCIM en el panel de tu proveedor de identidad. Asegúrate de establecer los siguientes valores para que la integración funcione sin problemas:

| Variable | Descripción |
|----------|-------------|
| SCIM connector base URL | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/ |
| User unique identifier field name | `email` |
| Support provisioning actions | Push new users, Push profile updates, Push groups |
| Authentication mode | OAuth2 |
| Access token endpoint | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/token/ |
| Authorization endpoint | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/authorize/ |
| Client id | <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> su valor se puede encontrar en el Dashboard, en 'Preferences' > 'Account' |
| Client secret | Su valor se puede encontrar ejecutando esta consulta en tu base de datos Postgres: <code>SELECT tenant_secret FROM tenants WHERE tenant_key = '<code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>';</code> |

Después de establecer estos valores, sigue las indicaciones del panel de tu proveedor de identidad para probar la integración y autorizar la aplicación.

{/*
Openreplay requires custom attributes to be used in order to properly setup users and groups with valid projects and permissions. You will need to add the following attributes in your Identity Provider dashboard:
- `projectKeys`. This attribute if of type `string array` and added to the user schema, though it will be controlled by the group resource. You will find all of the possible values of this attribute in the 'Projects' page of Openreplay's application.
- `permissions`. This attribute if of type `string array` and added to the user schema, though it will be controlled by the group resource. The possible values of this attribute are listed below:
- SESSION_REPLAY
- DEV_TOOLS
- METRICS
- ASSIST_LIVE
- ASSIST_CALL
- SPOT
- SPOT_PUBLIC
*/}

Tras esto, podrás aprovisionar identidades de usuario usando Openreplay como proveedor de servicios SCIM.

> **Nota:** Aunque Openreplay actúa como proveedor de servicios SCIM, no admite la partición de usuarios en varios grupos (es decir, cada usuario solo puede pertenecer a un grupo). Si esto no se respeta, un usuario podría quedar asignado a menos o más proyectos de lo esperado y podría tener menos o más permisos en la aplicación de Openreplay.

### Ejemplo usando Okta

En tu aplicación SAML 2.0, haz lo siguiente

#### Agregar aprovisionamiento SCIM

1. Haz clic en la pestaña **General**
2. En la sección **App Settings**, haz clic en **Edit**
3. En el campo **Provisioning**, selecciona **SCIM** y haz clic en **Save**

#### Elegir opciones de aprovisionamiento

1. Haz clic en la pestaña **Provisioning**. La configuración de la conexión SCIM aparece en **Settings > Integration**.
2. En **Settings > Integration**, haz clic en **Edit**.
3. Especifica la **SCIM connector base URL** y el nombre del campo del identificador único de tus usuarios mencionado anteriormente.
4. En **Supported provisioning actions**, elige las acciones de aprovisionamiento mencionadas anteriormente.
5. Establece el menú desplegable **Authentication Mode** en el valor mencionado anteriormente.
6. Establece **Access token endpoint**, **Authorization endpoint**, **Client id** y **Client secret** como se mencionó anteriormente.
7. Haz clic en **Save**.
8. Haz clic en **Authentiate application**.
9. En la pestaña **Provisioning**, haz clic en **To App**.
10. Haz clic en **Edit**, habilita `Create Users`, `Update User Attributes`, `Deactivate Users` y guarda los cambios.
- Antes de comenzar el siguiente paso, recomendamos crear nuevos grupos en Okta, llamados `OpenReplay-admin` donde enumeres a los usuarios que tienen privilegios de administrador en OpenReplay, y `OpenReplay-members` donde enumeres a los usuarios que tienen el rol `member` en OpenReplay, ...    
11. Ve a la pestaña **Push Groups**, haz clic en **+ Push Groups** (por nombre o por regla), selecciona el grupo que quieres enviar a OpenReplay y presiona **save**
- En este punto, los grupos enviados representan roles y privilegios de administrador en OpenReplay, y no tienen la lista de usuarios aprovisionados para OpenReplay.
12. Ve a la pestaña **Assignmets** y agrega usuarios de la forma que te convenga (usando personas o grupos)

{/*
#### Add extra attributes

You will need to add the attributes mentioned above.

1. Click the **Provisioning** tab.
2. In **Settings > To App**, scroll down and click **Add attribute**.

For `projectKeys`, use the following.

| Variable | Description |
|----------|-------------|
| Data type | string array |
| Variable name | projectKeys |
| External name | projectKeys |
| External namespace | urn:ietf:params:scim:schemas:extension:openreplay:2.0:User |
| Enum | checked |
| Attribute members | Use the values of the project names for the **Display name** and project keys as the **Value**. You will find these in the 'Projects' page of Openreplay's application |
| Attribute type | Group |
| Group priority | Use group priority |

For `permissions`, use the following.

| Variable | Description |
|----------|-------------|
| Data type | string array |
| Variable name | permissions |
| External name | permissions |
| External namespace | urn:ietf:params:scim:schemas:extension:openreplay:2.0:User |
| Enum | checked |
| Attribute members | Use the values outlined above for the **Display name** and **Value** |
| Attribute type | Group |
| Group priority | Use group priority |
*/}
## Errores

### La respuesta se recibió en http en lugar de https

Esto es muy común y se debe a que el encabezado 'X-Forwarded-Proto' no está presente en la solicitud. Para resolverlo, asegúrate de que el balanceador de carga esté reenviando correctamente el encabezado al backend de OpenReplay, y ejecuta `openreplay -e`; en la sección `ingress-nginx > config`, descomenta la línea `use-forwarded-headers: true`.
